--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <h1>URL Query String Parser</h1>
+      <h1>MOCK for FUND RECOMMEND</h1>
     </header>
     <div id="content">
       <h2>Query String:</h2>
